# gr-renderer

./: README.md  meson.build
include/glad/: glad.h
prototype/: geodesic_test.py  raytracing_test.py
src/: glad.c  main.cpp
src/shader/: shader.comp  shader.frag  shader.vert
